[package]
name = "brunoise"
version = "0.1.0"
edition = "2021"
authors = ["Patty C <schlerp@proton.me>"]
description = "A configurable event server, written in rust, scripted in python."
readme = "README.md"
repository = "https://github.com/schlerp/brunoise/"

[dependencies]
pyembed = "0.24"
actix-web = "4"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
